# Noiric_shop_website

./: README.md  dao.py  database.py  main.py  pyproject.toml
